src/app/globals.css
/* ... */
.landing-intro h1 {
  margin: 0;
  letter-spacing: 2px;
  font-size: 38px;
  line-height: 1.1;
  font-weight: 500;
  font-family: "Geist", sans-serif;
}

.landing-info {
  position: absolute;
  right: 50%;
  transform: translateX(50%);
  bottom: 40px;
  top: inherit;
  z-index: 9;
}
.landing-info h3 {
  font-size: 22px;
  letter-spacing: 2px;
  font-weight: 300;
  color: var(--accent);
  margin: 0;
}
.landing-info h2 {
  margin: 0;
  margin-top: 8px;
  margin-left: 20px;
  font-family: "Geist", sans-serif;
  font-weight: 600;
  font-size: 32px;
  line-height: 1.2;
  position: relative;
  display: flex;
  flex-wrap: nowrap;
  text-transform: uppercase;
  letter-spacing: 2px;
  overflow: hidden;
}
.landing-h2-info-1 {
  position: absolute;
  top: 0;
}
h2.landing-info-h2 {
  color: var(--accent);
  font-size: 42px;
  width: 120%;
  margin: 0;
  font-family: "Geist", sans-serif;
  font-weight: 600;
  position: relative;
  margin-left: -5px;
  overflow: hidden;
  line-height: 1.2;
}
.landing-h2-2 {
  position: absolute;
  top: 0;
}
.landing-info-h2::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 120%;
  z-index: 3;
  background-image: linear-gradient(
    0deg,
    var(--background) 40%,
    rgba(0, 0, 0, 0) 110%
  );
  top: 0;
  left: 0;
  pointer-events: none;
  display: none;
}

@keyframes textSlide1 {
  0%, 40% {
    transform: translateY(0);
  }
  50%, 90% {
    transform: translateY(-100%);
  }
  100% {
    transform: translateY(0);
  }
}

@keyframes textSlide2 {
  0%, 40% {
    transform: translateY(100%);
  }
  50%, 90% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(100%);
  }
}

.landing-h2-1, .landing-h2-info {
  animation: textSlide1 5s cubic-bezier(0.77, 0, 0.175, 1) infinite;
  display: inline-block;
  will-change: transform;
}

.landing-h2-2, .landing-h2-info-1 {
  animation: textSlide2 5s cubic-bezier(0.77, 0, 0.175, 1) infinite;
  display: inline-block;
  will-change: transform;
}

@media screen and (min-width: 500px) {
  .landing-circle2 {
    display: block;
  }
  .character-model {
    z-index: 0;
  }
  .landing-info h3 {
    font-size: 18px;
  }
  .landing-intro h2 {
    font-size: 18px;
  }
  .landing-intro h1 {
    font-size: 46px;
    line-height: 1.1;
  }
  .landing-info h2 {
    font-size: 35px;
  }
  h2.landing-info-h2 {
    font-size: 38px;
  }
}
@media screen and (min-width: 768px) {
  .character-model {
    height: 80vh;
  }
  .landing-intro h2 {
    font-size: 25px;
  }
  .landing-intro h1 {
    font-size: 56px;
    line-height: 1.1;
  }
  .landing-info h3 {
    font-size: 25px;
  }
  .landing-info h2 {
    font-size: 45px;
  }
  h2.landing-info-h2 {
    font-size: 55px;
  }
}
@media screen and (min-width: 1025px) {
  .character-model {
    height: 100vh;
    bottom: 0;
    z-index: 11;
    position: fixed;
  }
  .character-model::after,
  .character-model::before {
    display: none;
  }
  .landing-intro {
    top: 50%;
    left: 0;
    right: auto;
    transform: translate(0%, -50%);
  }
  .landing-intro h1 {
    font-size: 68px;
    line-height: 1.1;
  }

  .landing-info {
    bottom: auto;
    top: 51%;
    z-index: inherit;
    text-align: left;
    transform: translate(0%, -50%);
    right: 0;
    left: auto;
  }
  .landing-info h2 {
    font-size: 50px;
  }
  h2.landing-info-h2 {
    font-size: 60px;
  }
}
@media screen and (min-width: 1200px) {
  .landing-intro {
    top: 50%;
    left: 0;
    right: auto;
    transform: translate(0%, -50%);
  }
  .landing-intro h1 {
    font-size: 78px;
    line-height: 1.1;
  }

  .landing-info {
    bottom: auto;
    top: 51%;
    z-index: inherit;
    text-align: left;
    transform: translate(0%, -50%);
    right: 0;
    left: auto;
  }
  .landing-info h2 {
    font-size: 58px;
  }
  h2.landing-info-h2 {
    font-size: 68px;
  }
}
@media screen and (min-width: 1600px) {
  .landing-intro h2 {
    font-size: 35px;
  }
  .landing-intro h1 {
    font-size: 88px;
    line-height: 1.1;
  }
  .landing-info h3 {
    font-size: 35px;
  }
  .landing-info h2 {
    font-size: 68px;
  }
  h2.landing-info-h2 {
    font-size: 78px;
  }
}

/* =========================================================
   PRELOADER SCREEN SYSTEM (CUSTOM)
========================================================= */

.loading-screen {
  position: fixed;
  width: 100vw;
  height: var(--vh);
  background-color: var(--surface-2);
  z-index: 999999999;
  display: flex;
  place-items: center;
  justify-content: center;
  top: 0;
  left: 0;
}
.loading-button {
  padding: 20px 50px;
  border-radius: 100px;
  background-color: #000;
  overflow: hidden;
  font-size: 18px;
  font-weight: 500;
  position: relative;
  z-index: 9;
  color: #fff;
  border: 1px solid var(--border);
}
.loading-button::before {
  content: "";
  background-color: #ffffff;
  top: var(--mouse-y);
  left: var(--mouse-x);
  border-radius: 50%;
  width: 60px;
  height: 60px;
  opacity: 0;
  position: absolute;
  z-index: 99;
  filter: blur(60px);
  transform: translate(-50%, -50%);
  pointer-events: none;
}
.loading-button:hover::before {
  opacity: 1;
}
.loading-clicked .loading-button::before {
  opacity: 0;
}

.loading-wrap {
  --Lsize: 145px;
  padding: 6px;
  position: relative;
  min-width: 0px;
  min-height: 0px;
  border-radius: 100px;
  background-color: #000;
  overflow: hidden;
  transition: 0.8s ease-in-out;
  transition-delay: 0.2s;
  box-shadow: 0px 15px 15px 0px rgba(0, 0, 0, 0.2);
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid var(--border);
}
.loading-clicked {
  transition-delay: 0ms;
  transition-timing-function: cubic-bezier(0.33, 0.11, 1, 0.72);
  transform: scale(1);
  min-width: calc(100vw + 5000px);
  border-radius: 5000px;
  min-height: calc(100vh + 500px);
  box-shadow: none;
}
.loading-clicked .loading-button {
  overflow: visible;
}
/* ... */

